Fix horizontal scroll in B3

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,8 @@
 .white, .white a {
   color: #fff;
 } 
+
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
